<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:scrollbars="vertical">
    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/activity_vertical_margin"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/auth_desc"
        android:layout_margin="@dimen/activity_vertical_margin"/>
    <EditText
        android:id="@+id/auth_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lines="1"
        android:hint="@string/auth_placeholder"
        android:layout_margin="@dimen/activity_vertical_margin"/>
    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/proceed_button"
        android:onClick="onProceed"
        android:layout_margin="@dimen/activity_vertical_margin"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/auth_assistance"
        android:layout_margin="@dimen/activity_vertical_margin"/>

    <include android:id="@+id/footer"  layout="@layout/layout_footer"/>

</LinearLayout>
</ScrollView>